// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integer 1`] = `
Array [
  Object {
    "input": Object {
      "base": 2,
      "col": 1,
      "format": "plain",
      "max": 10,
      "min": 1,
      "num": 8,
    },
    "output": "https://random.org/integers/?base=2&col=1&min=1&max=10&num=8&format=plain",
  },
  Object {
    "input": Object {
      "base": 16,
      "col": 3,
      "format": "html",
      "max": 20,
      "min": 10,
      "num": 7,
    },
    "output": "https://random.org/integers/?base=16&col=3&min=10&max=20&num=7&format=html",
  },
]
`;

exports[`sequence 1`] = `
Array [
  Object {
    "input": Object {
      "col": 2,
      "format": "plain",
      "max": 10,
      "min": 1,
    },
    "output": "https://random.org/sequences/?min=1&max=10&col=2&format=plain",
  },
  Object {
    "input": Object {
      "col": 3,
      "format": "html",
      "max": 5,
      "min": 2,
    },
    "output": "https://random.org/sequences/?min=2&max=5&col=3&format=html",
  },
]
`;

exports[`string 1`] = `
Array [
  Object {
    "input": Object {
      "digits": "on",
      "format": "plain",
      "len": 10,
      "loweralpha": "off",
      "num": 1,
      "unique": "off",
      "upperalpha": "on",
    },
    "output": "https://random.org/strings/?num=1&len=10&digits=on&loweralpha=off&upperalpha=on&unique=off&format=plain",
  },
  Object {
    "input": Object {
      "digits": "on",
      "format": "html",
      "len": 22,
      "loweralpha": "on",
      "num": 7,
      "unique": "on",
      "upperalpha": "on",
    },
    "output": "https://random.org/strings/?num=7&len=22&digits=on&loweralpha=on&upperalpha=on&unique=on&format=html",
  },
  Object {
    "input": Object {
      "digits": "on",
      "format": "plain",
      "len": 32,
      "loweralpha": "off",
      "num": 9,
      "unique": "off",
      "upperalpha": "off",
    },
    "output": "https://random.org/strings/?num=9&len=32&digits=on&loweralpha=off&upperalpha=off&unique=off&format=plain",
  },
]
`;
